--- a/tz_cgj.html
+++ b/tz_cgj.html
@@ -21,6 +21,7 @@
 					<div class="nav-tabbar nav-tabbar-tab" style="border-color: #5f85cf;" >
 						<a class="tab-button" href="javascript:void(0);" onclick="tz()" style="color: #5f85cf;">部门消息</a>
 						<a class="tab-button active " href="javascript:void(0);" onclick="tz_cgj()" style="background-color:#5f85cf;">城管局消息</a>
+						<a class="tab-button " href="javascript:void(0);" onclick="lsxx()" style="color: #5f85cf;">历史消息</a>
 					</div>
 				</div>
 				<!-- 内容 End -->
