--- a/add.html
+++ b/add.html
@@ -26,21 +26,9 @@
 						<button class="bar-button current-city" onclick="index()"><i class="icon icon-newback" style="right: 40%;"></i></button>
 					</div>
 				</div>
-
 				<div class="my-info" style="margin-top: -160px;">
 					<div class="my-info-background" style="background-color:#5f85cf; -webkit-filter:blur(0px)"></div>
 					<span class="my-vip" style="background:none;font-weight: bolder;">收运登记</span>
-				</div>
-				<div class="m-panel">
-					<!-- <a href="" class="gd-item">
-							<div class="gdnum bj1">
-								<dl id="organization">商户名称:</dl><em id="phone">电话:</em><em id="nameB">负责人:</em>
-							</div>
-							<div class="text"><span>收运公司:</span><em id="department"></em></div>
-							<div class="text"><span>收运司机:</span><em id="driver"></em></div>
-							<div class="text"><span>收运时间:</span><em id="now"></em></div>
-							<div class="text"><span>收运地址:</span><em id="locNow"></em></div>
-						</a> -->
 				</div>
 				<div class="devider b-line"></div>
 				<div class="item-exhibition">
@@ -84,6 +72,7 @@
 				<div class="form-button t-line" id="trueShow" style="display:none;">
 					<button class="form-submit" style="background-color:#5f85cf" onclick="shouyun()">提 交</button>
 				</div>
+				</main>
 				<div class="devider b-line" id="addkg1" style="display:none;"></div>
 			</div>
 		</div>
