--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="content" style="/*box-shadow: rgba(0, 0, 0, .50) 0 0 10px;transform: translate(50%, 0px);*/">
 			<div class="scroll-content dwz-scroll">
 				<div class="scroll" id="all">
-					<div class="my-info">
+					<div class="my-info" z-index="123123">
 						<div class="my-info-background" style="background-color:#5f85cf; -webkit-filter:blur(0px);min-height:220px"></div>
 						<img class="my-avatar" src="zlys/images/driver.ico">
 						<span class="name" id="name">中科绵投司机平台</span>
@@ -58,6 +58,10 @@
 								<a class="grids-grid" href="javascript:;" onclick="bz()">
 									<div class="grids-grid-icon"><img src="images/bz.png" alt=""></div>
 									<p class="grids-grid-label">使用帮助</p>
+								</a>
+								<a class="grids-grid" href="test.html">
+									<div class="grids-grid-icon"><img src="images/bz.png" alt=""></div>
+									<p class="grids-grid-label">使用帮助1</p>
 								</a>
 							</div>
 						</div>
